Display all shows

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       href="https://static.cloud.altbalaji.com/img/favicon.ico"
     />
   </head>
-  <body>
+  <body style="background-color: black">
     <app-root></app-root>
   </body>
 </html>
